--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,34 @@
 .App {
-  text-align: center;
+  min-height: 100vh;
+  /*gradient from: webgradients.com*/
+  background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
+
+}
+
+.search-form{
+  min-height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-bar{
+width: 50%;
+border: none;
+padding: 10px;
+}
+
+.search-button{
+background: lightpink;
+border: none;
+padding: 10px 20px;
+color:black;
+
+}
+
+.recipes{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
